--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="https://img.icons8.com/?size=100&id=453&format=png&color=000000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechLogicHub</title>
   </head>
